<resources>
    <string name="app_name">Quiz Planner</string>
    <string name="tagline">выбери квиз по душе</string>

    <!--API-->
    <string name="api_url">quizplanner.ru</string>
    <string name="base_api_url">https://46.254.19.176:443/</string>
    <string name="base_api_img_url">https://quizplanner.ru</string>

    <string name="contacts">Контакты</string>
    <string name="email">quizplanner54@gmail.com</string>
    <string name="favorites">Избранное</string>
    <string name="add_to_favorites">Добавить в избранное</string>
    <string name="in_favorites">В избранном</string>
    <string name="favorites_empty">Вы не выбрали ни одной игры</string>
    <string name="author_empty">У автора нет ни одной игры</string>

    <string name="dummy">___</string>
    <string name="game_organization">organization</string>
    <string name="game_theme">theme</string>
    <string name="game_location">location</string>
    <string name="game_time">18:00</string>
    <string name="game_description_dummy">"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed convallis volutpat metus id tristique. Sed nec enim vitae lacus finibus ultricies. Nullam rhoncus, odio et mattis cursus, leo ante imperdiet tellus, at aliquam odio purus quis nunc. "</string>

    <string name="game_count_of_players">Участников в команде:"</string>
    <string name="game_date">Дата:</string>
    <string name="game_link">Зарегистрироваться:</string>
    <string name="game_price">Стоимость:</string>
    <string name="game_price_dimen"> руб.</string>
    <string name="tab_title">01</string>
    <string name="tab_sub_title">Пн</string>
    <string name="all_games">Все игры организатора</string>

    <string name="playback_speed_0_25">0.25x</string>
    <string name="playback_speed_0_5">0.5x</string>
    <string name="playback_speed_0_75">0.75x</string>
    <string name="playback_speed_1">1x</string>
    <string name="playback_speed_1_25">1.25x</string>
    <string name="playback_speed_1_5">1.5x</string>
    <string name="playback_speed_2">2x</string>

    <string name="ayp_play_button">Play button</string>
    <string name="ayp_null_time">0:00</string>
    <string name="ayp_open_video_in_youtube">Open video in YouTube</string>
    <string name="ayp_full_screen_button">Full screen button</string>
    <string name="ayp_live">LIVE</string>
    <string name="ayp_custom_action_left">YouTube player Custom action left</string>
    <string name="ayp_custom_action_right">YouTube player custom action right</string>

</resources>
