<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/quiz_detail_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/small_padding">

    <TextView
        android:id="@+id/detail_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/small_margin"
        android:text="@string/game_theme"
        android:textAppearance="?attr/textAppearanceListItem"
        android:textSize="@dimen/item_title_text_size"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/detail_block1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/detail_theme"
        android:layout_marginBottom="@dimen/small_margin"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/detail_img"
            android:layout_width="@dimen/item_img_size_big"
            android:layout_height="@dimen/item_img_size_big"
            android:layout_gravity="top"
            android:src="@drawable/ic_image_placeholder" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/small_margin"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/detail_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_organization"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textSize="@dimen/item_title_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detail_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_location"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/default_text_size"
                android:textStyle="italic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/item_text_margin"
                    android:text="@string/game_date"
                    android:textColor="@color/dark_grey"
                    android:textSize="@dimen/default_text_size"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/detail_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dummy"
                    android:textColor="@color/dark_grey"
                    android:textSize="@dimen/default_text_size"
                    android:textStyle="italic" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/detail_time_img"
                    android:layout_width="@dimen/item_icon_size"
                    android:layout_height="@dimen/item_icon_size"
                    android:layout_gravity="top"
                    android:src="@drawable/ic_time" />

                <TextView
                    android:id="@+id/detail_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/game_time" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/detail_block2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/detail_block1"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/detail_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_margin"
            android:text="@string/game_description_dummy"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/default_text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/item_text_margin"
                android:text="@string/game_count_of_players"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/default_text_size"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/detail_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/default_text_size"
                android:textStyle="italic" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/item_text_margin"
                android:text="@string/game_price"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/default_text_size"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/detail_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/item_text_margin"
                android:text="@string/dummy"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/default_text_size"
                android:textStyle="italic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_price_dimen"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/default_text_size"
                android:textStyle="italic" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/detail_link_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/item_text_margin"
                android:text="@string/game_link"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/default_text_size"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/detail_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/item_text_margin"
                android:maxLines="1"
                android:text="@string/dummy"
                android:textColor="@color/blue"
                android:textSize="@dimen/default_text_size"
                android:textStyle="italic" />

        </LinearLayout>

        <com.quizplanner.quizPlanner.player.ui.views.YouTubePlayerView
            android:id="@+id/youtube_player_view"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:autoPlay="false"
            app:showFullScreenButton="false" />

        <LinearLayout
            android:id="@+id/detail_favorites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/_2sdp">

            <ImageView
                android:id="@+id/detail_favorites_img"
                android:layout_width="@dimen/item_icon_size"
                android:layout_height="@dimen/item_icon_size"
                android:layout_gravity="top"
                android:src="@drawable/ic_check"
                android:tint="@color/medium_grey" />

            <TextView
                android:id="@+id/detail_favorites_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/item_margin"
                android:text="@string/add_to_favorites"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/default_text_size"
                android:textStyle="italic" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/detail_author_games"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_32sdp"
            android:layout_marginTop="@dimen/default_margin"
            android:background="@drawable/bg_author_btn"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/_2sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/item_margin"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp"
                android:text="@string/all_games"
                android:textColor="@drawable/author_btn_txt_color"
                android:textSize="@dimen/default_text_size"
                android:textStyle="italic" />

        </LinearLayout>

    </LinearLayout>

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"/>

</RelativeLayout>
